--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,7 @@ task buildZip(type: Zip, dependsOn: 'compileCoffeeScript') {
 
     into('/')
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.3'
+}
