--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
 
 
     "browser_action" : {
-        "default_icon" : "src/images/icon_disabled.png",
+        "default_icon" : "src/images/icon_19x19_grey.png",
         "default_title" : "Tab roulette"
     },
 
@@ -27,6 +27,12 @@
         "storage",
         "<all_urls>"
     ],
+
+    "icons": {
+        "16": "src/images/icon_16x16.png",
+        "48": "src/images/icon_48x48.png",
+        "128": "src/images/icon_128x128.png"
+    },
 
     "content_scripts" : [
         {
