--- a/manifest.json
+++ b/manifest.json
@@ -9,13 +9,14 @@
 
 
     "browser_action" : {
-        "default_icon" : "src/images/icon_19x19_grey.png",
-        "default_title" : "Tab roulette"
+        "default_icon" :    "src/images/icon_19x19_grey.png",
+        "default_title" :   "Tab roulette"
     },
 
     "background": {
         "scripts": [
             "src/jslib/underscore-1.4.3.js",
+            "src/jslib/bacon-0.6.13.js",
             "src/js/lib.js",
             "src/js/background.js"
         ]
@@ -38,7 +39,7 @@
         {
             "matches": [ "<all_urls>" ],
             "css": [ "src/css/content-script.css" ],
-            "js": [ "src/jslib/jquery-1.8.3.js", "src/js/content-script.js" ]
+            "js": [ "src/jslib/bacon-0.6.13.js", "src/jslib/jquery-1.8.3.js", "src/js/content-script.js" ]
         }
     ]
 
