--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
         "angular": "~1.0.7",
         "bacon": "~0.6.13",
         "jquery": "~2.0.3",
-        "underscore": "~1.5.1"
+        "underscore": "~1.5.1",
+        "when": "~2.3.0"
     },
     "exportsOverride": {
         "angular": {
@@ -18,6 +19,9 @@
         },
         "underscore": {
             "js": "**/underscore.js"
+        },
+        "when": {
+            "js" : "**/when.js"
         }
     }
 }
