--- a/assets/chrome/manifest.yml
+++ b/assets/chrome/manifest.yml
@@ -5,7 +5,6 @@ version: '0.6'
 manifest_version: 2
 options_page: assets/html/mission-control.html
 
-
 browser_action:
   default_icon: assets/images/icon_19x19_grey.png
   default_title: Tab roulette
@@ -18,8 +17,8 @@ permissions:
 
 icons:
   16:   assets/images/icon_16x16.png
-  48':  assets/images/icon_48x48.png
-  128': assets/images/icon_128x128.png
+  48:  assets/images/icon_48x48.png
+  128: assets/images/icon_128x128.png
 
 background:
   scripts:
