--- a/package.json
+++ b/package.json
@@ -2,20 +2,23 @@
   "name": "chrome-tab-roulette",
   "version": "0.6.0",
   "dependencies": {
-    "baconjs": "~0.6.1",
-    "jquery2": "~2.0.2"
+    "baconjs": "0.6.14",
+    "angular": "1.0.7",
+    "underscore": "1.5.1",
+    "jquery2": "2.0.3"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-jasmine": "~0.5.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-notify": "~0.2.13",
-    "grunt-yaml": "~0.2.1",
-    "grunt-contrib-compress": "~0.5.2",
-    "grunt-bower-task": "~0.3.1"
+    "grunt": "1.0.1",
+    "grunt-contrib-watch": "1.0.0",
+    "grunt-contrib-jshint": "1.1.0",
+    "grunt-contrib-coffee": "2.0.0",
+    "grunt-contrib-clean": "1.0.0",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-notify": "0.4.5",
+    "grunt-yaml": "0.4.2",
+    "grunt-contrib-compress": "1.4.3"
+  },
+  "scripts": {
+    "build": "grunt build"
   }
 }
